# gsw-memory

./: .gitignore  README.md  extract_failures.py  pyproject.toml  test_factual_prompt.py
baselines/: bm25_reranker_baseline.py  qwen_3_embedding_baseline.py
conf/rl/: grpo_lora_qwen3.yaml  gsw_interaction.yaml  gsw_tool_config.yaml
docs/: PERSONAL_MEMORY_DESIGN.md  PERSONAL_MEMORY_IMPLEMENTATION.md  RLVR_PIPELINE.md  SLEEP_TIME_AGENT_WORKFLOW.md  gsw_personal_memory_exploration.md
playground/: Chenda_README.md  README.md  agent_trace_analyzer.py  ask_questions.py  call_tools.py  consolidated_system_prompt.txt  copy_gsw_with_global_ids.py  eval_llm.py  eval_llm_comparison.py  evaluate_chain_following_batched.py  evaluate_multi_hop_qa.py  evaluate_multi_hop_qa_batched.py  evaluate_multi_hop_qa_chains_batched.py  evaluate_panini.py  extract_unanswerable.py  fix_reconciliation_ids.py  flatten_batch_output.py  generate_gsws_multihop.py  generate_hypernode_summaries.py  hypernode_connected_components.py  interactive_agent_debug.py  interactive_hypernode_query.py  interactive_musique_cli.py  interactive_question_decomposition.py  map_title_to_entity.py  merge_hypernodes_with_summaries.py  multi_hop_qa.py  multi_hop_qa_beam.py  multi_hop_qa_chains.py  multi_hop_qa_chains_n_hops.py  multi_hop_qa_chains_n_hops_backup.py  multi_hop_qa_simple.py  old_process_full_musique_corpus.py  operator_tests.ipynb  oracle_eval.py  plot_entity_scores.py  process_full_2wiki_corpus.py  process_full_2wiki_corpus_backup.py  process_full_musique_corpus.py  prompt_optimizer.ipynb  (+21 more)
playground/ablation_studies/: evaluate_beam_width_ablation.py  evaluate_no_chain_reranking.py  evaluate_no_decomposition.py  evaluate_no_dual_search.py  evaluate_no_qa_reranking.py  evaluate_no_reranking.py  evaluate_only_direct_qa.py  multi_hop_qa_chains.py  multi_hop_qa_chains_no_dual_search.py  multi_hop_qa_chains_no_qa_rerank.py  multi_hop_qa_chains_no_rerank.py  multi_hop_qa_chains_only_direct_qa.py  simple_entity_search.py
playground/gsw_creation_local/: create_training_data.py  gsw_inspector_streamlit.py  gsw_lora_ft.py  gsw_param_search.py  gsw_playground.ipynb  gsw_playground.py  gsw_thinking_lora_ft.py  notion_param_search_viz.py  notion_visualization.py  readme.md
playground/notebooks/: test_agentic_sleep_time.ipynb
playground/question_decomp_local/: Qwen3_(14B)_Reasoning_Conversational.ipynb  question_decomp_lora_ft.ipynb  question_decomp_lora_ft.py  qwen3_0.6b_full_finetune.ipynb  train_qwen3_question_decomp.py
playground/sleep-time/: GSW_ART_GRPO.ipynb  GSW_GRPO_Standalone.ipynb  Qwen3_(4B)_GRPO.ipynb  Qwen3_MoE.ipynb  run_sleep_time.py
playground/sleep_time/: run_sleep_time.py
playground/sleep_time/misc/: agent_trace_analyzer.py  extract_document_entities.py
src/gsw_memory/: __init__.py
src/gsw_memory/evaluation/: __init__.py  hipporag_eval.py
src/gsw_memory/memory/: __init__.py  models.py  operator.py  reconciler.py
src/gsw_memory/personal_memory/: __init__.py  chunker.py  models.py  processor.py  qa_agent.py  reconciler.py
src/gsw_memory/prompts/: __init__.py  aggregator_prompts.py  (+3 more)
tests/: test_conversation_reconciliation.py  test_models.py
(+67 files in other folders)
