[project]
name = "gsw-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shreyas Rajesh", email = "shreyasrajesh38@g.ucla.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "bespokelabs-curator>=0.1.25",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-voyageai>=0.1.6",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.2",
    "plotly>=6.2.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.6.1",
    "sentence-transformers==2.7.0",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers==4.45.2",
]

[project.scripts]
gsw-memory = "gsw_memory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]
